--- a/CMM007 - Project/CSS/about-page.css
+++ b/CMM007 - Project/CSS/about-page.css
@@ -7,18 +7,27 @@ http://www.color-hex.com/color-palette/54871
  #4c4555 (76,69,85) - Dark brown
 
  */
-.footer{
+
+.container{
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
     max-width: 1000px;
+    //max-height: 400px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #22758e;
 }
 
-.footer > div{
-    color: #e3e8e6;
-    text-align: center;
-    padding: 5px;
+#img1, #img2{
+    height: 200px;
+    width: 200px;
+    background-color: #f9c414;
+}
+
+#txt1, #txt2{
+    padding: 10px;
+    text-align: justify;
+    color: #b63b3b;
+    background-color: #e3e8e6;
+
 }
