--- a/CMM007 - Project/CSS/register.css
+++ b/CMM007 - Project/CSS/register.css
@@ -7,33 +7,27 @@ http://www.color-hex.com/color-palette/54871
  #4c4555 (76,69,85) - Dark brown
 
  */
-.profile-flex-c{
+.container{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
-
-#lh-column{
-    flex-direction: column;
-    flex-grow: 1;
+#error_box{
     background-color: #f9c414;
-
-}
-#profile-pic{
-    max-height: 200px;
-    max-width: 200px;
+    color: #b63b3b ;
+    padding: 20px;
 }
 
-#details{
-    flex-direction: column;
+#disclaimer{
+
 }
 
-#details-column{
-    flex-grow: 3;
-    max-width: 600px;
-    background-color: #22758e;
-    padding: 5px;
+#form{
+
+
 }
