--- a/CMM007 - Project/CSS/register.css
+++ b/CMM007 - Project/CSS/register.css
@@ -19,7 +19,7 @@ http://www.color-hex.com/color-palette/54871
 }
 #error_box{
     background-color: #f9c414;
-    color: #b63b3b ;
+    color: #4c4555 ;
     padding: 20px;
 }
 
