--- a/CMM007 - Project/CSS/projects.css
+++ b/CMM007 - Project/CSS/projects.css
@@ -37,3 +37,12 @@ http://www.color-hex.com/color-palette/54871
     height: 200px;
     background-color: #f9c414;
 }
+
+#projectlist > table {
+    border-collapse: collapse;
+    border: 1px solid #b63b3b;
+}
+
+tr, td {
+    border: 1px solid #b63b3b;
+}
