22-03-18 - Login and Registration working

--- a/CMM007 - Project/CSS/profile-style.css
+++ b/CMM007 - Project/CSS/profile-style.css
@@ -25,12 +25,12 @@ http://www.color-hex.com/color-palette/54871
     background-color: #f9c414;
     margin-right: 10px;
 }
-#profile-pic{
-    max-height: 200px;
-    max-width: 200px;
+#profile-pic > img{
+    display: block;
 }
 
 #details{
+    margin-top: 20px;
     flex-direction: column;
 }
 
