--- a/CMM007 - Project/CSS/footer-style.css
+++ b/CMM007 - Project/CSS/footer-style.css
@@ -22,3 +22,13 @@ http://www.color-hex.com/color-palette/54871
     text-align: center;
     padding: 5px;
 }
+
+a:link, a:visited {
+    text-decoration: none;
+    color: #f9c414;
+}
+
+a:hover, a:active{
+    text-decoration: underline;
+    color: #e3e8e6;
+}
