24-03-18 - Project creation working

--- a/CMM007 - Project/CSS/footer-style.css
+++ b/CMM007 - Project/CSS/footer-style.css
@@ -30,5 +30,5 @@ http://www.color-hex.com/color-palette/54871
 
 .footer > div > a:hover, a:active{
     text-decoration: underline;
-    color: #e3e8e6;
+    color: #b63b3b;
 }
