--- a/CMM007 - Project/CSS/header-style.css
+++ b/CMM007 - Project/CSS/header-style.css
@@ -31,7 +31,8 @@ body{
     padding-right: 5px;
 }
 
-#login > a:hover {
+#login > a:hover, a:active {
+    color: #b63b3b;
     background-color: #f9c414;
 }
 
@@ -58,7 +59,7 @@ body{
     padding-top: 5px;
     padding-bottom: 5px;
     border: 1px solid #f9c414;
-    border-radius: 25px 0px 0px 0px;
+    border-radius: 25px 0 0 0;
 }
 .navbar > div:hover{
     background-color: #f9c414;
