--- a/CMM007 - Project/CSS/footer-style.css
+++ b/CMM007 - Project/CSS/footer-style.css
@@ -14,6 +14,7 @@ http://www.color-hex.com/color-palette/54871
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 50px;
     background-color: #22758e;
 }
 
