--- a/CMM007 - Project/CSS/profile-style.css
+++ b/CMM007 - Project/CSS/profile-style.css
@@ -14,6 +14,7 @@ http://www.color-hex.com/color-palette/54871
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
+    color: #b63b3b;
 }
 .profile-flex-c > div {
     margin: 10px;
@@ -22,7 +23,7 @@ http://www.color-hex.com/color-palette/54871
 #lh-column{
     flex-direction: column;
     flex-grow: 1;
-    background-color: #f9c414;
+    /*background-color: #f9c414;*/
     margin-right: 10px;
 }
 #profile-pic > img{
@@ -32,11 +33,13 @@ http://www.color-hex.com/color-palette/54871
 #details{
     margin-top: 20px;
     flex-direction: column;
+    padding: 5px;
 }
 
 #details-column{
     flex-grow: 3;
     max-width: 600px;
-    background-color: #22758e;
+    background-color: #e3e8e6;
+
     padding: 5px;
 }
