--- a/CMM007 - Project/CSS/footer-style.css
+++ b/CMM007 - Project/CSS/footer-style.css
@@ -26,7 +26,7 @@ http://www.color-hex.com/color-palette/54871
 
 .footer > div > a:link, a:visited {
     text-decoration: none;
-    /*color: #f9c414;*/
+    color: #e3e8e6;
 }
 
 .footer > div > a:hover, a:active{
