--- a/CMM007 - Project/CSS/register.css
+++ b/CMM007 - Project/CSS/register.css
@@ -14,8 +14,6 @@ http://www.color-hex.com/color-palette/54871
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
     color: #b63b3b;
 }
 #error_box{
@@ -23,7 +21,9 @@ http://www.color-hex.com/color-palette/54871
     color: #4c4555 ;
     padding: 20px;
 }
-
+#banner {
+    max-width: 1000px;
+}
 #disclaimer{
     max-width: 800px;
     padding: 10px;
