--- a/CMM007 - Project/CSS/projects.css
+++ b/CMM007 - Project/CSS/projects.css
@@ -25,7 +25,7 @@ http://www.color-hex.com/color-palette/54871
     flex-grow: 4;
 }
 .table {
-    table-layout: fixed;
+    table-layout: auto;
 }
 .desc {
     text-align: justify;
@@ -51,8 +51,25 @@ http://www.color-hex.com/color-palette/54871
     color: #b63b3b;
 }
 
+td > a:link, a:visited {
+    color: #e3e8e6;
+    background-color: #b63b3b;
+    margin-top: 20px;
+    padding-left: 5px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-right: 5px;
+}
+
+td > a:hover {
+    background-color: #f9c414;
+    color: #b63b3b;
+}
+
+
 #projectlist {
     flex-shrink: 0;
+    max-width: 800px;
 }
 
 #projectlist > table {
@@ -66,8 +83,8 @@ tr, td {
     padding: 10px;
 }
 td > img {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     background-color: #f9c414;
 }
