--- a/CMM007 - Project/CSS/profile-style.css
+++ b/CMM007 - Project/CSS/profile-style.css
@@ -37,6 +37,7 @@ http://www.color-hex.com/color-palette/54871
 }
 #profile-pic > img{
     display: block;
+    object-fit: scale-down;
 }
 
 #details{
