--- a/CMM007 - Project/CSS/header-style.css
+++ b/CMM007 - Project/CSS/header-style.css
@@ -36,7 +36,7 @@ body{
     background-color: #f9c414;
 }
 
-.navbar {
+#navbar {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -47,7 +47,7 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
-.navbar > div{
+#navbar > div{
     width: 130px;
     height: 20px;
     margin-top: 10px;
@@ -61,17 +61,17 @@ body{
     border: 1px solid #f9c414;
     border-radius: 25px 0 0 0;
 }
-.navbar > div:hover{
+#navbar > div:hover{
     background-color: #f9c414;
 }
-.navbar > div > a:link, a:visited {
+#navbar > div > a:link, a:visited {
     color: #e3e8e6;
     padding-left: 40px;
     padding-bottom: 12px;
     padding-top: 12px;
     padding-right: 20px;
 }
-.navbar > div > a:hover, a:active {
+#navbar > div > a:hover, a:active {
     color: #b63b3b;
 }
 
