--- a/CMM007 - Project/CSS/profile-style.css
+++ b/CMM007 - Project/CSS/profile-style.css
@@ -34,6 +34,27 @@ http://www.color-hex.com/color-palette/54871
     flex-grow: 1;
     margin-right: 10px;
     background-color: #e3e8e6;
+    max-width: 200px;
+}
+#projectList {
+    flex-direction: column;
+    align-content: space-around;
+}
+
+#projectList > a:link, a:visited{
+    color: #e3e8e6;
+    background-color: #b63b3b;
+    padding-left: 5px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-right: 5px;
+    display: inline-block;
+    margin-bottom: 5px;
+}
+
+#projectList > a:hover, a:active {
+    color: #b63b3b;
+    background-color: #f9c414;
 }
 #profile-pic > img{
     display: block;
