--- a/CMM007 - Project/CSS/profile-style.css
+++ b/CMM007 - Project/CSS/profile-style.css
@@ -50,13 +50,15 @@ http://www.color-hex.com/color-palette/54871
     padding-right: 5px;
     display: inline-block;
     margin-bottom: 5px;
+    text-decoration: none;
 }
 
 #projectList > a:hover, a:active {
     color: #b63b3b;
     background-color: #f9c414;
 }
-#profile-pic > img{
+
+img{
     display: block;
     object-fit: scale-down;
 }
@@ -75,6 +77,7 @@ http://www.color-hex.com/color-palette/54871
     padding-top: 5px;
     padding-right: 5px;
     margin: 10px;
+    text-decoration: none;
 }
 
 #details > a:hover, a:active {
