03-04-18 - Cookie warning implemented

--- a/CMM007 - Project/CSS/front-page.css
+++ b/CMM007 - Project/CSS/front-page.css
@@ -41,8 +41,9 @@ http://www.color-hex.com/color-palette/54871
     text-align: justify;
     color: #b63b3b;
     background-color: #e3e8e6;
-
 }
 #social{
-
+    width: 600px;
+    height: 400px;
 }
+
