--- a/CMM007 - Project/CSS/header-style.css
+++ b/CMM007 - Project/CSS/header-style.css
@@ -9,6 +9,7 @@ http://www.color-hex.com/color-palette/54871
  */
 body{
     background-color: #e3e8e6;
+    font-family: 'Nunito Sans', sans-serif;
 }
 .header-flex-container {
     display: flex;
@@ -67,7 +68,6 @@ input[type=submit]:hover {
     margin-right: auto;
 }
 #navbar > div{
-    width: 130px;
     height: 20px;
     margin-top: 10px;
     margin-bottom: 5px;
