--- a/CMM007 - Project/CSS/header-style.css
+++ b/CMM007 - Project/CSS/header-style.css
@@ -42,6 +42,7 @@ input[type=button], input[type=submit] {
     color: #e3e8e6;
     padding: 5px;
     border: none;
+    font-size: inherit;
 }
 input[type=submit]:hover {
     background-color: #f9c414;
