--- a/CMM007 - Project/CSS/message.css
+++ b/CMM007 - Project/CSS/message.css
@@ -71,3 +71,13 @@ http://www.color-hex.com/color-palette/54871
     float: right;
     margin: 10px;
 }
+
+.error_box {
+    background-color: #f9c414;
+    color: #4c4555 ;
+    padding: 20px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
