--- a/CMM007 - Project/CSS/projects.css
+++ b/CMM007 - Project/CSS/projects.css
@@ -105,3 +105,106 @@ td > img {
     object-fit: cover;
     background-color: #f9c414;
 }
+@media (max-width: 800px) {
+    .container{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        background-color: #22758e;
+        max-width: 600px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+}
+@media (max-width: 600px) {
+
+
+    .container > div {
+        background-color: #e3e8e6;
+        padding: 5px;
+        flex-grow: 4;
+    }
+    .table {
+        table-layout: auto;
+    }
+    .desc {
+        text-align: justify;
+    }
+    #controls {
+        flex-direction: column;
+        flex-grow: 1;
+        align-content: space-around;
+        margin-right: 10px;
+    }
+    #controls > a:link, a:visited {
+        color: #e3e8e6;
+        background-color: #b63b3b;
+        margin-top: 20px;
+        padding-left: 5px;
+        padding-bottom: 5px;
+        padding-top: 5px;
+        padding-right: 5px;
+        text-decoration: none;
+    }
+
+    #controls > a:hover {
+        background-color: #f9c414;
+        color: #b63b3b;
+    }
+
+    td > a:link, a:visited {
+        color: #e3e8e6;
+        background-color: #b63b3b;
+        margin-top: 20px;
+        padding-left: 5px;
+        padding-bottom: 5px;
+        padding-top: 5px;
+        padding-right: 5px;
+        text-decoration: none;
+    }
+
+    td > a:hover {
+        background-color: #f9c414;
+        color: #b63b3b;
+    }
+
+    #projectlist {
+        flex-shrink: 0;
+        max-width: 580px;
+        overflow-y: auto;
+        height: 500px;
+    }
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+    ::-webkit-scrollbar-track {
+        background: #e3e8e6;
+        border: 1px solid #b63b3b;
+    }
+    ::-webkit-scrollbar-thumb{
+        background: #22758e;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+        background: #4c4555;
+    }
+
+    #projectlist > table {
+        border-collapse: collapse;
+        border: 1px solid #b63b3b;
+    }
+
+    tr, td {
+        border: 1px solid #b63b3b;
+        text-align: justify;
+        padding: 10px;
+        color: #b63b3b;
+    }
+    td > img {
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+        background-color: #f9c414;
+    }
+}
