--- a/CMM007 - Project/CSS/front-page.css
+++ b/CMM007 - Project/CSS/front-page.css
@@ -98,5 +98,10 @@ img{
         height: 400px;
         margin-left: auto;
         margin-right: auto;
+        justify-content: center;
+    }
+    #social > iframe {
+        margin-left: auto;
+        margin-right: auto;
     }
 }
