--- a/CMM007 - Project/CSS/profile-style.css
+++ b/CMM007 - Project/CSS/profile-style.css
@@ -98,7 +98,7 @@ img{
         justify-content: space-around;
         flex-direction: column;
         flex-wrap: wrap;
-        max-width: 1000px;
+        max-width: 600px;
         margin-left: auto;
         margin-right: auto;
         color: #b63b3b;
@@ -112,16 +112,18 @@ img{
         margin: 20px;
         padding: 10px;
         text-align: center;
-        max-width: 1000px;
+        max-width: 600px;
         margin-left: auto;
         margin-right: auto;
     }
     #lh-column{
-        flex-direction: column;
+        flex-direction: row;
         flex-grow: 1;
-        margin-right: 10px;
         background-color: #e3e8e6;
-        max-width: 240px;
+        max-width: 95%;
+        margin-left: auto;
+        margin-right: auto;
+        order: 2;
     }
     #projectList {
         flex-direction: column;
@@ -148,6 +150,7 @@ img{
     img{
         display: block;
         object-fit: scale-down;
+        order: 1;
     }
 
     #details{
@@ -177,5 +180,6 @@ img{
         max-width: 600px;
         background-color: #e3e8e6;
         padding: 5px;
+        order: 1;
     }
 }
