--- a/CMM007 - Project/CSS/profile-style.css
+++ b/CMM007 - Project/CSS/profile-style.css
@@ -180,6 +180,8 @@ img{
         max-width: 600px;
         background-color: #e3e8e6;
         padding: 5px;
+        margin-left: auto;
+        margin-right: auto;
         order: 1;
     }
 }
