--- a/CMM007 - Project/CSS/register.css
+++ b/CMM007 - Project/CSS/register.css
@@ -35,3 +35,37 @@ http://www.color-hex.com/color-palette/54871
     margin: 10px;
     text-align: right;
 }
+
+@media (max-width:1000px) {
+    #banner > img {
+        max-width: 100%;
+    }
+}
+
+@media (max-width:600px) {
+    .container{
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        max-width: 600px;
+        margin-left: auto;
+        margin-right: auto;
+        color: #b63b3b;
+    }
+    #error_box{
+        background-color: #f9c414;
+        color: #4c4555 ;
+        padding: 20px;
+    }
+    #disclaimer{
+        max-width: 600px;
+        padding: 10px;
+        text-align: justify;
+    }
+
+    #form{
+        columns: 1;
+        margin: 10px;
+        text-align: left;
+    }
+}
