--- a/CMM007 - Project/CSS/header-style.css
+++ b/CMM007 - Project/CSS/header-style.css
@@ -146,7 +146,7 @@ input[type=submit]:hover {
     input[type=button], input[type=submit] {
         background-color: #b63b3b;
         color: #e3e8e6;
-        padding: 2px;
+        padding: 5px;
         border: none;
         font-size: inherit;
     }
@@ -169,10 +169,10 @@ input[type=submit]:hover {
     #login > a:link, a:visited{
         color: #e3e8e6;
         background-color: #b63b3b;
-        padding-left: 1px;
-        padding-bottom: 1px;
-        padding-top: 1px;
-        padding-right: 1px;
+        padding-left: 5px;
+        padding-bottom: 5px;
+        padding-top: 5px;
+        padding-right: 5px;
         text-decoration: none;
     }
 
@@ -218,7 +218,10 @@ input[type=submit]:hover {
     }
     #navbar > div > a:link, a:visited {
         color: #e3e8e6;
-        padding: 5px;
+        padding-left: 40px;
+        padding-bottom: 7px;
+        padding-top: 7px;
+        padding-right: 50%;
         text-decoration: none;
     }
     #navbar > div > a:hover, a:active {
